# supreme-system-v5

./: .coverage  .coverage.DESKTOP-RU09T50.12464.XFruJPfx  .coverage.DESKTOP-RU09T50.496.XKxmoEvx  .coverage.DESKTOP-RU09T50.6032.XoeOrhcx  .coveragerc  .dockerignore  .env  .env.example  .env.hyper_optimized  .env.optimized  .env.standard  .env.test  .env.ultra_constrained  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_COMPLETION_REPORT.md  AI_COVERAGE_GUIDE.md  ALL_CRITICAL_ISSUES_FIXED.md  ALL_TESTS_FIXED_SUMMARY.md  API_KEYS_TO_ROTATE.md  AUTO_CLEANUP_TOKEN.ps1  BENCHMARK_REPORT.md  BUG_FIXES_APPLICATION_GUIDE.md  BUYER_RESEARCH_GUIDE.md  CALENDLY_SETUP.md  CHANGELOG.md  CODEX_PROMPT_DATA_MODULE_TESTS.md  CODEX_PROMPT_DATA_MODULE_TESTS_V2.md  CODE_OF_CONDUCT.md  COLLABORATOR_NOTIFICATION.md  COMMIT_MESSAGES.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  COVERAGE_BENCHMARK_SUMMARY.md  CRITICAL_FIXES_ACTION_PLAN.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_PROJECT_REALIGNMENT.md  CROSS_VALIDATION_ANALYSIS.md  (+250 more)
.cursor/: prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
archive/: reports
assets/: README.md
backtest_results/: kelly_comparison_report.md
baselines/: baseline_20251116_171055.json  baseline_20251116_172019.json  baseline_20251116_172227.json  baseline_20251116_233821.json  baseline_20251116_234318.json  baseline_20251117_002700.json  baseline_20251117_005816.json  baseline_20251119_145518.json
config/: ai_trader_c2b.yaml  complete_system.yaml  kill_switch.json  multi_key_config.py  security_monitoring.json
dashboard/: app.py  trading_dashboard.py
data/: historical_ETH_USDT.csv
deployment_logs/: final_system_validation_20251104_144937.json  final_system_validation_20251104_145033.json  final_system_validation_20251104_145136.json
docker/: Dockerfile.testing
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BUYER_SETUP_GUIDE.md  BYBIT_MIGRATION_GUIDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_VALIDATION_GUIDE.md  DEPLOYMENT.md  DEVOPS_DEPLOYMENT_GUIDE.md  ENTERPRISE_OPTIMIZER_GUIDE.md  GITHUB_SETUP.md  PHASE2_BREAKTHROUGH.md  POST_MERGE_MONITORING.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICKSTART.md  SECURITY.md  SUPREME_OPTIMIZATION_ROADMAP.md  data_preprocessing.md  index.md  performance-baseline.md  sequence_diagrams.md  training.md
due-diligence/: 01-system-overview.md  02-performance-benchmarks.md  03-security-audit.md  README.md
examples/: early_stopping_example.py  gradient_clipping_example.py  live_trading_demo.py  normalization_example.py  variance_threshold_example.py  walk_forward_example.py
monitoring/: alert_rules.yml  prometheus.i3.yml  prometheus.yml
nginx/: nginx.conf
orchestrator/: system_manifest.json
prod/: argo-application.yaml
reports/: comparison_2025-11-16T17-20-22.txt  comparison_2025-11-16T23-40-21.txt  comparison_2025-11-17T00-24-22.txt  comparison_2025-11-17T00-57-37.txt  daily_report_day_1.json  paper_trading_report_20251109_155553.json  simple_paper_trading_report_20251109_162358.json  simple_paper_trading_report_20251109_171533.json  simple_paper_trading_report_20251110_135157.json  simple_paper_trading_report_20251110_140016.json
research/: comprehensive_optimization_analysis.md  deepseek_r1_integration_plan.md  revolutionary_quantum_architecture.md
run_artifacts/: ab_test_report_eth_usdt_20251105_144002.txt  ab_test_results_eth_usdt_20251105_144002.json  ab_test_statistical_report_20251103_081745.json  backtest_results_20251104_203127.json  backtest_results_20251104_203808.json  backtest_results_20251104_221436.json  backtest_results_20251105_005341.json  benchmark_execution_immediate.json  comprehensive_validation_report_20251105_154712.json  comprehensive_validation_report_20251105_161435.json  comprehensive_validation_report_20251105_234432.json  comprehensive_validation_report_20251106_001000.json  connectivity_metrics_20251105_161432.json  connectivity_metrics_20251105_234806.json  connectivity_results_20251105_161432.json  connectivity_results_20251105_234806.json  connectivity_tests_20251105_161432.json  connectivity_tests_20251105_234806.json  enhanced_backtest_eth_usdt_20251105_143758.json  final_validation_nuclear_complete_20251103.json  option_b_enhanced_backtest_20251106_111156.json  option_b_enhanced_backtest_20251106_111300.json  option_b_production_validation_20251106_110525.json  option_b_production_validation_20251106_111148.json  performance_profile_20251105_142920.json  performance_profile_20251105_143042.json  performance_profile_20251105_154506.json  performance_profile_20251105_154647.json  performance_profile_20251105_161340.json  performance_profile_20251105_161411.json  performance_profile_20251105_234349.json  performance_profile_20251106_000927.json  performance_summary_20251104_232554.json  performance_summary_20251104_232603.json  performance_summary_20251105_005347.json  performance_summary_20251105_154639.json  performance_summary_20251105_161404.json  performance_summary_20251105_234411.json  phase2_backtest_results_20251106_025033.json  phase2_backtest_results_20251106_025131.json  (+13 more)
rust/supreme_core/: Cargo.toml
rust/supreme_core/src/: indicators.rs  lib.rs  quantum_engine.rs  realistic_engine.rs  whale_detector.rs
rust/supreme_core/src/algorithms/: orchestrator.rs  simd_optimizer.rs
rust/supreme_core/src/data/: realistic_pipeline.rs
rust/supreme_core/src/memory/: realistic_manager.rs
rust/supreme_core/src/tests/: data_corruption_recovery.rs  graceful_shutdown_scenarios.rs  memory_fragmentation_72h.rs
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: 24h_monitoring.py  72h_stability_test.py  ab_test_run.sh  ab_test_validation.py  advanced_testing_suite.py  backtest_kelly_comparison.py  bench_optimized.py  bench_optimized_simple.py  benchmark_correlation_performance.py  benchmark_data_pipeline.py  benchmark_execution_latency.py  benchmark_hmm_performance.py  benchmark_performance.py  benchmark_strategies.py  benchmark_tca_performance.py  build_optimized.sh  capture_baseline.py  chaos_testing.py  clean_deps.py  (+91 more)
(+1168 files in other folders)
