[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supreme-system-v5"
version = "5.0.0"
description = "Ultra-constrained Python trading system (ETH-USDT scalping)"
authors = [{name = "Supreme Trading Team", email = "team@supreme-system.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "quantitative", "finance", "scalping", "futures"]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "polars>=0.20.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "websockets>=12.0,<13.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "ta>=0.10.2,<0.11.0",
    "finta>=1.3,<2.0.0",
    "prometheus-client>=0.17.0,<0.18.0",
    "loguru>=0.7.2,<0.8.0",
    "rich>=13.7.0,<14.0.0",
    "psutil>=5.9.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.7,<9.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "hypothesis>=6.86.0,<7.0.0",
    "ruff>=0.1.0,<0.2.0",
    "black>=23.9.0,<24.0.0",
    "isort>=5.13.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "bandit>=1.7.5,<2.0.0",
]
exchange = [
    "ccxt>=4.1.64,<5.0.0",
    "yfinance>=0.2.24,<1.0.0",
]

[project.scripts]
supreme-system = "supreme_system_v5.cli:main"
supreme-backtest = "supreme_system_v5.backtest:main"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\\.pyi?$'
exclude = '''
(
    /( 
        \\.git
      | \\.venv
      | venv
      | __pycache__
      | \\.pytest_cache
      | target
      | build
      | dist
      | src/[^/]*\\.py$
    )/
    | src/[^/]*\\.py$
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git/**",
    "__pycache__/**",
    ".venv/**",
    "venv/**",
    "target/**",
    "build/**",
    "dist/**",
    "src/*.py",
    "src/**/*.py",
]

[tool.ruff.lint]
select = ["E","F","W","C90","I","N","UP","YTT","S","BLE","FBT","B","A","COM","C4","DTZ","T10","EM","EXE","FA","ISC","ICN","G","INP","PIE","T20","PYI","PT","Q","RSE","RET","SLF","SLOT","SIM","TID","TCH","INT","ARG","PTH","TD","FIX","PGH","PL","TRY","FLY","NPY","PERF"]
ignore = ["S101","PLR2004","T201","S603","S607","F401"]
fixable = ["ALL"]
unfixable = ["F401","F841"]

[tool.ruff.lint.isort]
profile = "black"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
skip = ["src"]
known_first_party = ["supreme_system_v5"]
known_third_party = [
    "numpy","polars","aiohttp","fastapi","pydantic",
    "websockets","uvicorn","ta","finta","prometheus_client",
    "loguru","rich","psutil","click","dotenv"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=python.supreme_system_v5",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=75",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast)",
    "integration: Integration tests (may be slow)",
    "smoke: Smoke tests (basic functionality)",
    "performance: Performance benchmarks",
    "exchange: Tests requiring exchange connectivity",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["python/supreme_system_v5"]
omit = ["tests/*","scripts/*","src/*","*/__init__.py","*/conftest.py","*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true
exclude = ["^src/.*\\.py$","^build/","^dist/","^target/"]
