[package]
name = "supreme-system-v5-core"
version = "5.0.0"
edition = "2021"
authors = ["10K Expert Nuclear Team <nuclear@supremesystem.ai>"]
description = "Ultra-Low Latency Trading Core - <10μs Processing"
license = "MIT"
repository = "https://github.com/thanhmuefatty07/supreme-system-v5"

[lib]
name = "supreme_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Performance-critical dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
atomic = "0.5"

# Mathematical libraries
num-traits = "0.2"
num-complex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
rustfft = "6.1"

# Memory optimization
memmap2 = "0.9"
bytes = "1.5"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"

# Networking (ultra-low latency)
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"

# Profiling and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = { version = "0.13", features = ["process"] }

# Optimization features
[profile.release]
lto = true
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Target-specific optimizations
[target.'cfg(target_arch = "x86_64")']
[dependencies.cpufeatures] 
version = "0.2"

[[bin]]
name = "benchmark_core"
path = "src/bin/benchmark.rs"