[package]
name = "supreme_core"
version = "0.1.0"
edition = "2021"
authors = ["Supreme System V5 Team"]
description = "Ultra-constrained high-performance trading engine core"
license = "MIT"

[lib]
name = "supreme_core"
crate-type = ["cdylib", "lib"]

[dependencies]
# Core performance dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Mathematical and statistical operations
num-traits = "0.2"
num-complex = "0.4"
ndarray = { version = "0.15", features = ["serde"] }

# High-performance computing
rayon = "1.7"  # Parallel processing
simdeez = "1.0"  # SIMD optimizations

# Memory management and optimization
bytes = "1.4"
memmap2 = "0.7"  # Memory-mapped files

# Networking and API connectivity
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.20"  # WebSocket client
tokio-tungstenite = "0.20"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging (minimal for performance)
log = "0.4"
env_logger = "0.10"

# Python FFI bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"  # NumPy integration

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Hashing for whale detection
sha2 = "0.10"
blake3 = "1.4"

# JSON processing optimization
simd-json = "0.13"

# Memory allocator (performance)
jemalloc-sys = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

# Optional features for different allocators
[features]
default = ["jemalloc"]
jemalloc = ["jemalloc-sys"]
mimalloc = ["mimalloc"]
simd = ["simdeez"]

# Build optimizations
[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Link-time optimization  
codegen-units = 1     # Single codegen unit for max optimization
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols

# Development profile with some optimization
[profile.dev]
opt-level = 1         # Some optimization for development
debug = true         # Keep debug info

# Target-specific optimizations for i3 8th gen
[build]
target-cpu = "native"  # Optimize for target CPU
target-features = "+sse4.2,+avx,+avx2"  # Enable SIMD features for 8th gen i3