[package]
name = "supreme_core"
version = "2.0.0-realistic"
authors = ["Supreme System V5 Team"]
edition = "2021"
description = "High-Performance Supreme Trading System Core Engine - Realistic Architecture"
license = "MIT"
repository = "https://github.com/thanhmuefatty07/supreme-system-v5"
keywords = ["trading", "simd", "finance", "zero-copy", "optimization"]
categories = ["algorithms", "finance"]

[lib]
name = "supreme_core"
crate-type = ["cdylib", "rlib"]

# ==============================================================================
# REALISTIC HIGH-PERFORMANCE DEPENDENCIES
# ==============================================================================

[dependencies]
# APACHE ARROW ZERO-COPY (REALISTIC VERSIONS)
arrow2 = { version = "0.18", features = ["compute", "io_parquet", "io_json"] }
parquet2 = "0.17"  # Compatible columnar format

# POLARS DATAFRAME PROCESSING (REALISTIC)
polars = { version = "0.35", features = ["lazy", "temporal", "strings"] }

# SIMD & VECTORIZATION (REALISTIC FOR i3 8TH GEN)
wide = "0.7"  # SIMD abstractions
num-traits = "0.2"
num-complex = "0.4"
ndarray = { version = "0.15", features = ["rayon", "serde"] }

# HIGH-PERFORMANCE MEMORY MANAGEMENT
memmap2 = "0.9"  # Memory-mapped files
bumpalo = "3.14"  # Bump allocation
parking_lot = "0.12"  # Fast synchronization
smallvec = "1.11"  # Stack-allocated vectors
hashbrown = "0.14"  # High-performance HashMap

# ASYNC & PARALLEL PROCESSING
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
rayon = "1.8"  # Data parallelism
crossbeam = "0.8"  # Lock-free data structures

# PYTHON FFI & INTEGRATION
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"  # NumPy integration

# SERIALIZATION & DATA FORMATS
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization

# NETWORKING & REAL-TIME DATA
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.21"  # WebSocket implementation
tokio-tungstenite = "0.21"

# FINANCIAL & MATHEMATICAL LIBRARIES
statrs = "0.16"  # Statistical distributions
rust_decimal = { version = "1.33", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }

# CRYPTOGRAPHY & SECURITY
sha2 = "0.10"  # SHA-256 hashing
blake3 = "1.5"  # BLAKE3 hashing
rand = "0.8"  # Random number generation

# UTILITIES
once_cell = "1.19"  # Lazy initialization
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"  # Error handling
thiserror = "1.0"  # Error derivation

# PERFORMANCE PROFILING & MONITORING (OPTIONAL)
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

# JSON OPTIMIZATION
simd-json = "0.13"  # SIMD-optimized JSON parsing

# ==============================================================================
# REALISTIC FEATURE FLAGS
# ==============================================================================

[features]
default = [
    "arrow-integration",
    "simd-optimization", 
    "memory-optimization",
    "zero-copy"
]

# HIGH-PERFORMANCE FEATURES
arrow-integration = ["arrow2", "polars", "parquet2"]
simd-optimization = ["wide", "ndarray"]
memory-optimization = ["bumpalo", "smallvec", "hashbrown"]
zero-copy = ["memmap2"]

# DEVELOPMENT & PROFILING
dev-tools = ["env_logger"]
max-performance = ["simd-optimization", "zero-copy", "memory-optimization", "jemalloc"]

# ALLOCATOR OPTIONS
jemalloc = ["jemallocator"]
mimalloc-allocator = ["mimalloc"]

# ==============================================================================
# OPTIMIZED BUILD PROFILES
# ==============================================================================

[profile.release]
opt-level = 3          # Maximum optimization
lto = "fat"           # Link-time optimization
codegen-units = 1     # Single codegen unit
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols
overflow-checks = false

# DEVELOPMENT WITH OPTIMIZATION
[profile.dev]
opt-level = 1         # Basic optimization
debug = true
overflow-checks = true

# ==============================================================================
# BUILD CONFIGURATION FOR i3 8TH GEN
# ==============================================================================

[build]
# i3 8th Gen SIMD optimizations (realistic capabilities)
target-features = ["+sse4.2", "+avx", "+avx2"]
target-cpu = "skylake"  # i3 8th Gen architecture

# ==============================================================================
# DEV DEPENDENCIES & TESTING
# ==============================================================================

[dev-dependencies]
# BENCHMARKING
criterion = { version = "0.5", features = ["html_reports"] }

# TESTING FRAMEWORKS
tokio-test = "0.4"
proptest = "1.4"
rstest = "0.18"

# ==============================================================================
# BENCHMARKS
# ==============================================================================

[[bench]]
name = "simd_indicators"
harness = false
required-features = ["simd-optimization"]

[[bench]]
name = "memory_optimization"
harness = false
required-features = ["memory-optimization"]

[[bench]]
name = "arrow_zero_copy"
harness = false
required-features = ["arrow-integration"]

# ==============================================================================
# METADATA CONFIGURATION
# ==============================================================================

[package.metadata]
# REALISTIC MEMORY OPTIMIZATION CONFIG
[package.metadata.memory]
budget-mb = 800  # 800MB allocation for Rust core (realistic)
pool-config = [
    { size = 64, count = 500, alignment = 64 },      # Small allocations
    { size = 256, count = 300, alignment = 64 },     # Medium allocations
    { size = 1024, count = 100, alignment = 64 },    # Large allocations
]

# REALISTIC SIMD OPTIMIZATION CONFIG
[package.metadata.simd]
target-features = ["+avx2", "+sse4.2"]
target-cpu = "skylake"  # i3 8th Gen architecture
vectorization = true

# REALISTIC PERFORMANCE TARGETS
[package.metadata.performance]
latency-target-ms = 100  # 100 milliseconds (realistic)
throughput-target = 1000  # 1000 events per second
memory-target-mb = 800  # 800MB memory usage target
cpu-utilization-target = 0.75  # 75% CPU utilization
performance-improvement = "2-4x"  # Realistic 2-4x improvement